Added http configurer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 my.brewery.apihost=http://localhost:9092
+my.customer.apihost=http://localhost:9092
+
+
+sfg.maxtotalconnections=100
+sfg.defaultmaxtotalconnections=20
+sfg.connectionrequesttimeout=3000
+sfg.sockettimeout=3000
